# Knivo

./: .gitignore  COMMIT_CONVENTION.md  README.md  pyproject.toml
book2md/: README.md  __init__.py  __main__.py  config.py  config.yaml  converter.py  requirements.txt  utils.py
book2md/processors/: chapter.py  ocr.py  text.py
book2md/readers/: azw3_reader.py  base.py  epub_reader.py  pdf_reader.py
book2md/writers/: markdown.py
picmp/: README.md  config.json  picmp.py  run.bat  template.html
tokenCounter/: README.md  count_tokens.py
